--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "mongoose": "^5.2.12",
     "morgan": "~1.9.0",
     "xml2js": "^0.4.19"
   },
